--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,7 +2,7 @@ name: Testing
 on: [push]
 
 jobs:
-  Install-Test-msda:
+  Install-Test-skada:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -11,7 +11,7 @@ jobs:
         shell: bash -l {0}
     steps:
 
-    ## Install msda
+    ## Install skada
     - name: Checking Out Repository
       uses: actions/checkout@v2
     # Cache MNE Data
@@ -23,12 +23,12 @@ jobs:
       with:
         path: ~/mne_data
         key: ${{ runner.os }}-v3
-    - name: Setting Up Conda msda Environment
+    - name: Setting Up Conda skada Environment
       uses: conda-incubator/setup-miniconda@v2
       with:
         environment-file: environment.yml
         python-version: 3.7
-        activate-environment: msda
+        activate-environment: skada
         auto-activate-base: false
     # Show Conda and Python Versions
     - run: conda --version
@@ -38,4 +38,4 @@ jobs:
     - name: Install Codecov etc.
       run: pip install --upgrade pytest pytest-cov codecov
     - name: Run Tests # See https://stackoverflow.com/a/59959080/1469195 for the cov-report logic
-      run: pytest --cov=msda test/ --cov-report term --cov-report xml:coverage.xml
+      run: pytest --cov=skada skada/ --cov-report term --cov-report xml:coverage.xml
