--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,5 +37,7 @@ jobs:
     ## Run Tests
     - name: Install Codecov etc.
       run: pip install --upgrade pytest pytest-cov codecov
+    - name: Install GPU stuffs for CI
+      run: conda install pytorch cpuonly -y -c pytorch
     - name: Run Tests # See https://stackoverflow.com/a/59959080/1469195 for the cov-report logic
       run: pytest --cov=skada skada/ --cov-report term --cov-report xml:coverage.xml
