--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,28 +27,31 @@ jobs:
                 git pull --ff-only upstream "refs/pull/$(cat merge.txt)/merge";
                 git fetch upstream master;
               fi
-        # Install skada environment
-        - run: 
-            name: Setting Up Conda skada Environment
-            uses: conda-incubator/setup-miniconda@v2
-            with:
-              environment-file: environment.yml
-              python-version: 3.7
-              activate-environment: skada
-              auto-activate-base: false
-        - run: 
-            name: Install GPU stuffs for CI
-            command: |
-              conda install pytorch cpuonly -y -c pytorch
-        # Show Conda and Python Versions
-        - run: conda --version
-        - run: conda info --envs
-        - run: which python
+        # Load our data
+        - restore_cache:
+            keys:
+              - data-cache-0
+              - pip-cache
 
+        - run:
+            name: Install ffmpeg
+            command: |
+              sudo apt update 
+              sudo apt install ffmpeg
+        - run:
+            name: Get Python running
+            command: |
+              python -m pip install --user --upgrade --progress-bar off pip
+              python -m pip install --user -e .
+              python -m pip install --user --upgrade --no-cache-dir --progress-bar off -r requirements.txt 
+              python -m pip install --user --upgrade --progress-bar off -r docs/requirements.txt
+              python -m pip install --user --upgrade --progress-bar off ipython sphinx-gallery memory_profiler              
+          # python -m pip install --user --upgrade --progress-bar off ipython "https://api.github.com/repos/sphinx-gallery/sphinx-gallery/zipball/master" memory_profiler
         - save_cache:
             key: pip-cache
             paths:
               - ~/.cache/pip
+
 
         # Look at what we have and fail early if there is some library conflict
         - run:
@@ -164,7 +167,7 @@ workflows:
       - build_docs:
           filters:
             tags:
-              only: /[0-9]+(\.[0-9]+)*$/
+              only: /[0-9]+(\.[0-9]+)*$/  
       - deploy_master:
           requires:
             - build_docs
