--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,16 +28,16 @@ jobs:
                 git fetch upstream master;
               fi
         # Load our data
-        - restore_cache:
-            keys:
-              - data-cache-0
-              - pip-cache
+        # - restore_cache:
+        #     keys:
+        #       - data-cache-0
+        #       - pip-cache
 
-        - run:
-            name: Install ffmpeg
-            command: |
-              sudo apt update 
-              sudo apt install ffmpeg
+        # - run:
+        #     name: Install ffmpeg
+        #     command: |
+        #       sudo apt update 
+        #       sudo apt install ffmpeg
         - run:
             name: Get Python running
             command: |
@@ -59,11 +59,11 @@ jobs:
             command: |
                which python
                python -c "import skada"
-        - run:
-            name: Correct link in release file
-            command: |
-              sed -i -r 's/PR #([[:digit:]]*)/\[PR #\1\]\(https:\/\/github.com\/tgnassou\/da-toolbox\/pull\/\1\)/' RELEASES.md
-              sed -i -r 's/Issue #([[:digit:]]*)/\[Issue #\1\]\(https:\/\/github.com\/tgnassou\/da-toolbox\/issues\/\1\)/' RELEASES.md
+        # - run:
+        #     name: Correct link in release file
+        #     command: |
+        #       sed -i -r 's/PR #([[:digit:]]*)/\[PR #\1\]\(https:\/\/github.com\/tgnassou\/da-toolbox\/pull\/\1\)/' RELEASES.md
+        #       sed -i -r 's/Issue #([[:digit:]]*)/\[Issue #\1\]\(https:\/\/github.com\/tgnassou\/da-toolbox\/issues\/\1\)/' RELEASES.md
         # Build docs
         - run:
             name: make html
