--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
                 echo "Merging $(cat merge.txt)";
                 git remote add upstream https://github.com/tgnassou/da-toolbox.git;
                 git pull --ff-only upstream "refs/pull/$(cat merge.txt)/merge";
-                git fetch upstream master;
+                git fetch upstream main;
               fi
         - run:
             name: Get Python running
