enable ledoit wolf in reg for CORAL (#22)
* enable ledoit wolf in reg for CORAL

* fix docstring

* flake8

* fix invsqrtm

* better tests

* update ci script

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,5 +1,17 @@
 name: Testing
-on: [push]
+on:
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - 'main'
+  push:
+    branches:
+      - 'main'
+  create:
+    branches:
+      - 'main'
+    tags:
+      - '**'
 
 jobs:
   Install-Test-skada:
