--- a/.github/workflows/testing_all.yml
+++ b/.github/workflows/testing_all.yml
@@ -49,5 +49,9 @@ jobs:
     ## Run Tests
     - name: Install Codecov etc.
       run: pip install --upgrade pytest pytest-cov codecov
+    - name: Install GPU stuffs for CI
+      run: conda install pytorch cpuonly -y -c pytorch
+    - name: Install Skorch for CI
+      run: conda install -c conda-forge skorch
     - name: Run Tests # See https://stackoverflow.com/a/59959080/1469195 for the cov-report logic
-      run: pytest --cov=skada skada/ --ignore=skada/feature --cov-report term --cov-report xml:coverage.xml
+      run: pytest --cov=skada skada/ --cov-report term --cov-report xml:coverage.xml
