--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,5 +49,11 @@ jobs:
     ## Run Tests
     - name: Install Codecov etc.
       run: pip install --upgrade pytest pytest-cov codecov
-    - name: Run Tests # See https://stackoverflow.com/a/59959080/1469195 for the cov-report logic
+    - name: Run Tests withtout torch # See https://stackoverflow.com/a/59959080/1469195 for the cov-report logic
       run: pytest --cov=skada skada/ --ignore=skada/feature --cov-report term --cov-report xml:coverage.xml
+    - name: Install GPU stuffs for CI
+      run: conda install pytorch cpuonly -y -c pytorch
+    - name: Install Skorch for CI
+      run: conda install -c conda-forge skorch
+    - name: Run Tests with torch # See https://stackoverflow.com/a/59959080/1469195 for the cov-report logic
+      run: pytest --cov=skada skada/ --cov-report term --cov-report xml:coverage.xml
