--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -51,11 +51,9 @@ jobs:
       run: pip install --upgrade pytest pytest-cov codecov
     - name: Run Tests without torch
       run: pytest skada/ --ignore=skada/feature
-    - name: Install imporlib-metadata
-      run: pip install importlib-metadata
     - name: Install GPU stuffs for CI
       run: conda install pytorch cpuonly -y -c pytorch
     - name: Install Skorch for CI
-      run: conda install -c conda-forge skorch
+      run: conda install -c conda-forge skorch<=0.13.0
     - name: Run Tests with torch # See https://stackoverflow.com/a/59959080/1469195 for the cov-report logic
       run: pytest --cov=skada skada/ --cov-report term --cov-report xml:coverage.xml
