--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,13 +68,13 @@ jobs:
             paths:
               - html
 
-workflows:
-  version: 2
+# workflows:
+#   version: 2
 
-  default:
+#   default:
 
-    jobs:
-      - build_docs:
-          filters:
-            tags:
-              only: /[0-9]+(\.[0-9]+)*$/
+#     jobs:
+#       - build_docs:
+#           filters:
+#             tags:
+#               only: /[0-9]+(\.[0-9]+)*$/
