Install sklearn (nightly build)

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,7 +48,9 @@ jobs:
     # - run: conda --version
     # - run: conda info --envs
     - run: which python
-    - name: Install package
+    - name: Install sklearn (nightly)
+      run: pip install --pre --extra-index https://pypi.anaconda.org/scientific-python-nightly-wheels/simple scikit-learn
+    - name: Install 'skada' package
       run: pip install -ve . && pip install -r requirements.txt
     # Run Tests
     - name: Install Codecov etc.
