--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -36,7 +36,7 @@ jobs:
     # Install Python
     - uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: "3.10"
     # - name: Setting Up Conda skada Environment
     #   uses: conda-incubator/setup-miniconda@v2
     #   with:
