--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -38,13 +38,12 @@ jobs:
       with:
         python-version: "3.10"
     - run: which python
-    - run:
-        name: Install 'skada' package
-        command: |
-          python -m pip install --user --upgrade --progress-bar off pip
-          python -m pip install --user -e .
-          python -m pip install --user --upgrade --no-cache-dir --progress-bar off -r requirements.txt
-          python -m pip pip install --upgrade pytest pytest-cov codecov
+    - name: Install 'skada' package
+      run: |
+        python -m pip install --user --upgrade --progress-bar off pip
+        python -m pip install --user -e .
+        python -m pip install --user --upgrade --no-cache-dir --progress-bar off -r requirements.txt
+        python -m pip pip install --upgrade pytest pytest-cov codecov
     # Run Tests
     - name: Run Tests without torch
       run: pytest skada/ --ignore=skada/feature
