--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 -i https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
-scikit-learn>=1.4.dev0 
-scipy
+scikit-learn==1.4.dev0 
+numpy>=1.17.3
+scipy>=1.5.0
