--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -42,8 +42,8 @@ jobs:
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
         python -m pip install --user -e .
-        python -m pip install --user --upgrade --no-cache-dir --progress-bar off -r requirements.txt
-        python -m pip pip install --upgrade pytest pytest-cov codecov
+        python -m pip install --pre --extra-index https://pypi.anaconda.org/scientific-python-nightly-wheels/simple 'scikit-learn==1.4.dev0'
+        python -m pip install --upgrade pytest pytest-cov codecov
     # Run Tests
     - name: Run Tests without torch
       run: pytest skada/ --ignore=skada/feature
