--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -41,8 +41,8 @@ jobs:
     - name: Install 'skada' package
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
+        python -m pip install --user -r requirements.txt
         python -m pip install --user --pre --extra-index https://pypi.anaconda.org/scientific-python-nightly-wheels/simple 'scikit-learn==1.4.dev0'
-        python -m pip install --user --upgrade pot>=0.9.1
         python -m pip install --user --upgrade pytest pytest-cov codecov
         python -m pip install --user -e .
     # Run Tests
