--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
--i https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
-scikit-learn==1.4.dev0 
-numpy>=1.17.3
-scipy>=1.5.0
+# -i https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
+# scikit-learn==1.4.dev0 
+numpy==1.24.4
+scipy==1.10.1
+pot==0.9.1
