--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,26 +33,19 @@ jobs:
       with:
         path: ~/skada_datasets
         key: ${{ runner.os }}-v3
-    # Install Python
+    # Install Python & Packages
     - uses: actions/setup-python@v4
       with:
-        python-version: 3.8
-    # - name: Setting Up Conda skada Environment
-    #   uses: conda-incubator/setup-miniconda@v2
-    #   with:
-    #     environment-file: environment.yml
-    #     python-version: 3.9
-    #     activate-environment: skada
-    #     auto-activate-base: false
-    # Show Conda and Python Versions
-    # - run: conda --version
-    # - run: conda info --envs
+        python-version: "3.10"
     - run: which python
     - name: Install 'skada' package
-      run: pip install -ve . && pip install -r requirements.txt
+      run: |
+        python -m pip install --user --upgrade --progress-bar off pip
+        python -m pip install --user -r requirements.txt
+        python -m pip install --user --pre --extra-index https://pypi.anaconda.org/scientific-python-nightly-wheels/simple 'scikit-learn==1.4.dev0'
+        python -m pip install --user --upgrade pytest pytest-cov codecov
+        python -m pip install --user -e .
     # Run Tests
-    - name: Install Codecov etc.
-      run: pip install --upgrade pytest pytest-cov codecov
     - name: Run Tests without torch
       run: pytest skada/ --ignore=skada/feature
     # - name: Install GPU stuffs for CI
