--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ jobs:
             command: |
                which python
                python -c "import skada"
+               which sphinx-build
 
         # - run:
         #     name: Correct link in release file
