--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,9 @@ jobs:
               echo ${CI_PULL_REQUEST//*pull\//} | tee merge.txt
               if [[ $(cat merge.txt) != "" ]]; then
                 echo "Merging $(cat merge.txt)";
-                git remote add upstream https://github.com/PythonOT/POT.git;
+                git remote add upstream https://github.com/scikit-adaptation/skada.git;
                 git pull --ff-only upstream "refs/pull/$(cat merge.txt)/merge";
-                git fetch upstream master;
+                git fetch upstream main;
               fi
 
         # Load our data
@@ -47,8 +47,8 @@ jobs:
               python -m pip install --user --upgrade --progress-bar off pip
               python -m pip install --user --progress-bar off -r requirements.txt
               python -m pip install --user --pre --extra-index https://pypi.anaconda.org/scientific-python-nightly-wheels/simple 'scikit-learn==1.4.dev0'
-              python -m pip install --user --upgrade --progress-bar off -r docs/requirements.txt
-              python -m pip install --user --upgrade --progress-bar off ipython sphinx-gallery memory_profiler              
+              python -m pip install --user --upgrade --progress-bar off -r docs/requirements.txt     
+              python -m pip install --user --upgrade --progress-bar off .
           # python -m pip install --user --upgrade --progress-bar off ipython "https://api.github.com/repos/sphinx-gallery/sphinx-gallery/zipball/master" memory_profiler
         - save_cache:
             key: pip-cache
@@ -62,12 +62,13 @@ jobs:
             command: |
                which python
                python -c "import skada"
+               which sphinx-build
 
-        - run:
-            name: Correct link in release file
-            command: |
-              sed -i -r 's/PR #([[:digit:]]*)/\[PR #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/pull\/\1\)/' RELEASES.md
-              sed -i -r 's/Issue #([[:digit:]]*)/\[Issue #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/issues\/\1\)/' RELEASES.md
+        # - run:
+        #     name: Correct link in release file
+        #     command: |
+        #       sed -i -r 's/PR #([[:digit:]]*)/\[PR #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/pull\/\1\)/' RELEASES.md
+        #       sed -i -r 's/Issue #([[:digit:]]*)/\[Issue #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/issues\/\1\)/' RELEASES.md
         # Build docs
         - run:
             name: make html
