--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,10 @@ jobs:
             command: |
               sudo apt update 
               sudo apt install ffmpeg
+        - run:
+            name: Install latex (for logo)
+            command: |
+              sudo apt install texlive-latex-base              
 
         - run:
             name: Get Python running
