add latex extra

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
         - run:
             name: Install latex (for logo)
             command: |
-              sudo apt install texlive-latex-base texlive-fonts-recommended             
+              sudo apt install texlive-latex-base texlive-fonts-recommended texlive-latex-extra            
 
         - run:
             name: Get Python running
