--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,8 @@ jobs:
         - run:
             name: Install latex (for logo)
             command: |
-              sudo apt install texlive-latex-base texlive-fonts-recommended texlive-latex-extra cm-super     
+              sudo apt install texlive-latex-base texlive-fonts-recommended
+              texlive-latex-extra cm-super dvipng 
 
         - run:
             name: Get Python running
