--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,7 +14,7 @@ on:
       - '**'
 
 jobs:
-  Install-Test-skada:
+  Test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -38,12 +38,14 @@ jobs:
       with:
         python-version: "3.10"
     - run: which python
-    - name: Install 'skada' package
+    - name: Install dependencies
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
         python -m pip install --user -r requirements.txt
-        python -m pip install --user --pre --extra-index https://pypi.anaconda.org/scientific-python-nightly-wheels/simple 'scikit-learn==1.4.dev0'
-        python -m pip install --user --upgrade pytest pytest-cov codecov
+        python -m pip install --user --pre --upgrade 'scikit-learn==1.4.0rc1'
+        python -m pip install --user --upgrade pytest pytest-cov codecov 
+    - name: Install 'skada' package
+      run: |
         python -m pip install --user -e .
     # Run Tests
     - name: Run Tests without torch
