--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # -i https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
 # scikit-learn==1.4.dev0 
-numpy==1.24.4
-scipy==1.10.1
-pot==0.9.1
-sphinx
+numpy>=1.24
+scipy>=1.10
+pot
