--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,7 +49,7 @@ jobs:
         python -m pip install --user -e .
     # Run Tests
     - name: Run Tests without torch
-      run: pytest skada/ --ignore=skada/feature
+      run: pytest skada/ --verbose --ignore=skada/feature
     # - name: Install GPU stuffs for CI
     #   run: conda install pytorch cpuonly -y -c pytorch
     # - name: Install Skorch for CI
