--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -50,7 +50,13 @@ jobs:
     # Run Tests
     - name: Run Tests without torch
       run: pytest skada/ --verbose --cov=skada skada/ --cov-report term
+    # Codecov 
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
+        
   Test:
     runs-on: ubuntu-latest
     strategy:
@@ -87,4 +93,8 @@ jobs:
     # Run Tests
     - name: Run Tests without torch
       run: pytest skada/ --verbose --cov=skada skada/ --cov-report term
-
+    # Codecov 
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
