--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,7 +49,7 @@ jobs:
         python -m pip install --user -e .
     # Run Tests
     - name: Run Tests without torch
-      run: pytest skada/ --verbose --cov=skada skada/ --cov-report term  --ignore=skada.feature
+      run: pytest skada/ --verbose --cov=skada skada/ --cov-report term  --ignore=skada/feature
     # Codecov 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
