--- a/.github/workflows/flake8.yaml
+++ b/.github/workflows/flake8.yaml
@@ -1,5 +1,17 @@
 name: flake8-codestyle
-on: [push]   
+on:
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - 'main'
+  push:
+    branches:
+      - 'main'
+  create:
+    branches:
+      - 'main'
+    tags:
+      - '**'
 
 jobs:
   Flake8-Codestyle-Check:
