try doc deply on main

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,45 @@ jobs:
             root: docs/build
             paths:
               - html
+    deploy_main:
+      docker:
+        - image: cimg/python:3.10
+      steps:
+        - attach_workspace:
+            at: /tmp/build
+        - run:
+            name: Fetch docs
+            command: |
+              set -e
+              mkdir -p ~/.ssh
+              echo -e "Host *\nStrictHostKeyChecking no" > ~/.ssh/config
+              chmod og= ~/.ssh/config
+              if [ ! -d ~/scikit-adaptation.github.io ]; then
+                git clone git@github.com:/scikit-adaptation/scikit-adaptation.github.io ~/scikit-adaptation.github.io --depth=1
+              fi
+        - run:
+            name: Deploy docs
+            command: |
+              set -e;
+              if [ "${CIRCLE_BRANCH}" == "main" ]; then
+                git config --global user.email "circle@scikit-adaptation.github.io";
+                git config --global user.name "Circle CI";
+                cd ~/scikit-adaptation.github.io;
+                git checkout main
+                git remote -v
+                git fetch origin
+                git reset --hard origin/main
+                git clean -xdf
+                echo "Deploying dev docs for ${CIRCLE_BRANCH}.";
+                cd dev
+                cp -a /tmp/build/html/* .;
+                touch .nojekyll;
+                git add -A;
+                git commit -m "CircleCI update of dev docs (${CIRCLE_BUILD_NUM}).";
+                git push origin master;
+              else
+                echo "No deployment (build: ${CIRCLE_BRANCH}).";
+              fi
 
 
 workflows:
@@ -96,3 +135,10 @@ workflows:
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*$/  
+      - deploy_main:
+          requires:
+            - build_docs
+          filters:
+            branches:
+              only:
+                - main
