debig push to main

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,7 +119,7 @@ jobs:
                 touch .nojekyll;
                 git add -A;
                 git commit -m "CircleCI update of dev docs (${CIRCLE_BUILD_NUM}).";
-                git push origin master;
+                git push origin main;
               else
                 echo "No deployment (build: ${CIRCLE_BRANCH}).";
               fi
