[MRG] Add SKADA logo (#41)
* add logo

* pep8

* pep8

* intsall latex fo,ts

* add latex extra

* add again another latex font

* dvipng

* small stuff

* crappy bug

* update logo

* ad logo to documentation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,11 @@ jobs:
             command: |
               sudo apt update 
               sudo apt install ffmpeg
-
+        - run:
+            name: Install latex (for logo)
+            command: |
+              sudo apt install texlive-latex-base texlive-fonts-recommended texlive-latex-extra cm-super dvipng
+              
         - run:
             name: Get Python running
             command: |
