--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,7 +48,7 @@ jobs:
         python -m pip install --user -e .
     # Run Tests
     - name: Run Tests without torch
-      run: pytest skada/ --verbose --cov=skada skada/ --cov-report term
+      run: pytest tests/ --verbose --cov=skada skada/ --cov-report term
     # Codecov 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
@@ -90,7 +90,7 @@ jobs:
         python -m pip install --user -e .
     # Run Tests
     - name: Run Tests with torch
-      run: pytest skada/ --verbose --cov=skada skada/ --cov-report term
+      run: pytest tests/ --verbose --cov=skada skada/ --cov-report term
     # Codecov 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
