--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,10 @@ repos:
           - tomli
         files: ^skada/|^docs/|^examples/
         types_or: [python, bib, rst, inc]
+        args: [
+          "--ignore-words",
+          "ignore-words.txt",
+        ]
 
   # yamllint
   - repo: https://github.com/adrienverge/yamllint.git
