--- a/ruff.toml
+++ b/ruff.toml
@@ -1,4 +1,8 @@
-exclude = ["__init__.py"]
+exclude = [
+    "__init__.py",
+    "base.py",  # XXX to fix
+    "utils.py",  # XXX to fix
+]
 
 [lint]
 select = ["A", "B006", "D", "E", "F", "I", "W", "UP"]
@@ -7,16 +11,22 @@ ignore = [
     "D104", # Missing docstring in public package
     "D413", # Missing blank line after last section
     "UP031", # Use format specifiers instead of percent format
+    "D400", # First line should end with a period
+    "D401", # First line of docstring should be in imperative mood
+    "D404", # First word of the docstring should not be "This"
+    "A002", # Argument `input` is shadowing a Python builtin
+    "D105", # Missing docstring in magic method
+    "D205", # 1 blank line required between summary line and description
 ]
 
-[pydocstyle]
+[lint.pydocstyle]
 convention = "numpy"
 ignore-decorators = [
     "property",
     "setter",
 ]
 
-[per-file-ignores]
+[lint.per-file-ignores]
 "skada/**/test_*.py" = [
     "D103", # Missing docstring in public function
 ]
