--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -42,7 +42,11 @@ jobs:
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
         python -m pip install --user -r requirements.txt
-        python -m pip install --user --upgrade pytest pytest-cov codecov 
+        python -m pip install --user --upgrade pytest pytest-cov codecov
+    - name: pre-commit
+        pip install pre-commit
+        pre-commit install --install-hooks
+        pre-commit run --all-files
     - name: Install 'skada' package
       run: |
         python -m pip install --user -e .
