--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,5 +1,5 @@
 name: Testing
-on:
+on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
   pull_request:
     branches:
@@ -44,6 +44,7 @@ jobs:
         python -m pip install --user -r requirements.txt
         python -m pip install --user --upgrade pytest pytest-cov codecov
     - name: pre-commit
+      run: |
         pip install pre-commit
         pre-commit install --install-hooks
         pre-commit run --all-files
@@ -53,7 +54,7 @@ jobs:
     # Run Tests
     - name: Run Tests without torch
       run: pytest skada/ --verbose --cov=skada skada/ --cov-report term  --ignore=skada/feature
-    # Codecov 
+    # Codecov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
@@ -88,14 +89,14 @@ jobs:
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
         python -m pip install --user -r requirements_full.txt
-        python -m pip install --user --upgrade pytest pytest-cov codecov 
+        python -m pip install --user --upgrade pytest pytest-cov codecov
     - name: Install 'skada' package
       run: |
         python -m pip install --user -e .
     # Run Tests
     - name: Run Tests without torch
       run: pytest skada/ --verbose --cov=skada skada/ --cov-report term
-    # Codecov 
+    # Codecov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
