--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,48 @@ allow_redefinition = True
 
 [codespell]
 skip = ./.git,./.mypy_cache,./doc/_build,./doc/auto_examples,./doc/modules/generated
+
+[rstcheck]
+report_level = "WARNING"
+ignore_roles =
+    attr,
+    class,
+    doc,
+    eq,
+    exc,
+    file,
+    footcite,
+    footcite:t,
+    func,
+    gh,
+    kbd,
+    meth,
+    mod,
+    newcontrib,
+    py:mod,
+    ref,
+    samp,
+    term
+
+ignore_directives =
+    autoclass,
+    autofunction,
+    automodule,
+    autosummary,
+    bibliography,
+    cssclass,
+    currentmodule,
+    dropdown,
+    footbibliography,
+    glossary,
+    graphviz,
+    grid,
+    highlight,
+    minigallery,
+    tabularcolumns,
+    toctree,
+    rst-class,
+    tab-set,
+    towncrier-draft-entries
+
+ignore_messages = ^.*(Unknown target name|Undefined substitution referenced)[^`]*$
