--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ allow_redefinition = True
 skip = ./.git,./.mypy_cache,./doc/_build,./doc/auto_examples,./doc/modules/generated
 
 [rstcheck]
-report_level = "WARNING"
+report_level = WARNING
 ignore_roles =
     attr,
     class,
@@ -76,6 +76,7 @@ ignore_directives =
     toctree,
     rst-class,
     tab-set,
-    towncrier-draft-entries
+    towncrier-draft-entries,
+    include
 
 ignore_messages = ^.*(Unknown target name|Undefined substitution referenced)[^`]*$
