--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,7 +48,7 @@ jobs:
         python -m pip install --user -e .
     # Run Tests
     - name: Run Tests without torch
-      run: pytest skada/ --verbose --cov=skada skada/ --cov-report term  --ignore=skada/feature
+      run: pytest skada/ --verbose --cov=skada --cov-report term --ignore=skada/deep
     # Codecov 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
@@ -89,8 +89,8 @@ jobs:
       run: |
         python -m pip install --user -e .
     # Run Tests
-    - name: Run Tests without torch
-      run: pytest skada/ --verbose --cov=skada skada/ --cov-report term
+    - name: Run Tests with torch
+      run: pytest skada/ --verbose --cov=skada --cov-report term
     # Codecov 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
