--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,5 +1,5 @@
 name: Testing
-on:
+on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
   pull_request:
     branches:
@@ -42,7 +42,12 @@ jobs:
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
         python -m pip install --user -r requirements.txt
-        python -m pip install --user --upgrade pytest pytest-cov codecov 
+        python -m pip install --user --upgrade pytest pytest-cov codecov
+    - name: pre-commit
+      run: |
+        pip install pre-commit
+        pre-commit install --install-hooks
+        pre-commit run --all-files
     - name: Install 'skada' package
       run: |
         python -m pip install --user -e .
@@ -84,7 +89,7 @@ jobs:
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
         python -m pip install --user -r requirements_full.txt
-        python -m pip install --user --upgrade pytest pytest-cov codecov 
+        python -m pip install --user --upgrade pytest pytest-cov codecov
     - name: Install 'skada' package
       run: |
         python -m pip install --user -e .
