--- a/setup.cfg
+++ b/setup.cfg
@@ -16,30 +16,6 @@ addopts =
 # max line length for black
 max-line-length = 88
 target-version = ['py37']
-# Default flake8 3.5 ignored flags
-ignore=
-    # check ignored by default in flake8. Meaning unclear.
-    E24,
-    # continuation line under-indented
-    E121,
-    # closing bracket does not match indentation
-    E123,
-    # continuation line over-indented for hanging indent
-    E126,
-    # space before : (needed for how black formats slicing)
-    E203,
-    # missing whitespace around arithmetic operator
-    E226,
-    # multiple statements on one line (def)
-    E704,
-    # do not assign a lambda expression, use a def
-    E731,
-    # do not use variables named 'l', 'O', or 'I'
-    E741,
-    # line break before binary operator
-    W503,
-    # line break after binary operator
-    W504
 exclude=
     .git,
     __pycache__,
@@ -58,3 +34,49 @@ allow_redefinition = True
 
 [codespell]
 skip = ./.git,./.mypy_cache,./doc/_build,./doc/auto_examples,./doc/modules/generated
+
+[rstcheck]
+report_level = WARNING
+ignore_roles =
+    attr,
+    class,
+    doc,
+    eq,
+    exc,
+    file,
+    footcite,
+    footcite:t,
+    func,
+    gh,
+    kbd,
+    meth,
+    mod,
+    newcontrib,
+    py:mod,
+    ref,
+    samp,
+    term
+
+ignore_directives =
+    autoclass,
+    autofunction,
+    automodule,
+    autosummary,
+    bibliography,
+    cssclass,
+    currentmodule,
+    dropdown,
+    footbibliography,
+    glossary,
+    graphviz,
+    grid,
+    highlight,
+    minigallery,
+    tabularcolumns,
+    toctree,
+    rst-class,
+    tab-set,
+    towncrier-draft-entries,
+    include
+
+ignore_messages = ^.*(Unknown target name|Undefined substitution referenced)[^`]*$
