Ignore deep/* tests when torch is not installed (#133)
* Ignore deep tests when torch is not installed

* Properly re-throw the exception

* Fix flake8

* Catch ModuleNotFoundError

* Use collect_ignore_glob

* Use full path for ignore

* Cleaner error message on import

* ruff to ignore E402 for deep tests

* Pep8 fixes

* Fix make_shifted_datasets import

* Fix pep8

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ exclude=
 per-file-ignores =
     examples/*: E402
     doc/conf.py: E402
+    skada/deep/tests/*.py: E402
 
 [mypy]
 ignore_missing_imports = True
