--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ test = pytest
 # disable-pytest-warnings should be removed once we rewrite tests
 # using yield with parametrize
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
-testpaths = sklearn
+testpaths = skada
 addopts =
     --doctest-modules
     --disable-pytest-warnings
