--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,11 +67,11 @@ jobs:
                python -c "import skada"
                which sphinx-build
 
-        # - run:
-        #     name: Correct link in release file
-        #     command: |
-        #       sed -i -r 's/PR #([[:digit:]]*)/\[PR #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/pull\/\1\)/' RELEASES.md
-        #       sed -i -r 's/Issue #([[:digit:]]*)/\[Issue #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/issues\/\1\)/' RELEASES.md
+        - run:
+            name: Correct link in release file
+            command: |
+              sed -i -r 's/PR #([[:digit:]]*)/\[PR #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/pull\/\1\)/' RELEASES.md
+              sed -i -r 's/Issue #([[:digit:]]*)/\[Issue #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/issues\/\1\)/' RELEASES.md
         # Build docs
         - run:
             name: make html
