--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,8 @@ jobs:
             command: |
               sed -i -r 's/PR #([[:digit:]]*)/\[PR #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/pull\/\1\)/' RELEASES.md
               sed -i -r 's/Issue #([[:digit:]]*)/\[Issue #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/issues\/\1\)/' RELEASES.md
+              sed -i -r 's/https:\/\/github.com\/scikit-adaptation\/skada\/pull\/([[:digit:]]*)/\[PR #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/pull\/\1\)/' RELEASES.md
+              sed -i -r 's/https:\/\/github.com\/scikit-adaptation\/skada\/issue\/([[:digit:]]*)/\[Issue #\1\]\(https:\/\/github.com\/scikit-adaptation\/skada\/issue\/\1\)/' RELEASES.md
         # Build docs
         - run:
             name: make html
