--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -71,18 +71,15 @@ jobs:
       with:
         python-version: "3.10"
     - run: which python
-    - name: Install dependencies
-      run: |
-        python -m pip install --user --upgrade --progress-bar off pip
-        python -m pip install --user -r requirements.txt
-        python -m pip install --user --upgrade pytest pytest-cov codecov
+
     - name: Install 'skada' package
       run: |
-        python -m pip install --user -e .
+        python -m pip install --user --upgrade --progress-bar off pip
+        python -m pip install --user -e .[test]
     # Run Tests
     - name: Run Tests without torch
       run: pytest skada/ --verbose --cov=skada --cov-report term
-    # Codecov 
+    # Codecov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
@@ -113,18 +110,14 @@ jobs:
       with:
         python-version: "3.10"
     - run: which python
-    - name: Install dependencies
-      run: |
-        python -m pip install --user --upgrade --progress-bar off pip
-        python -m pip install --user -r requirements_full.txt
-        python -m pip install --user --upgrade pytest pytest-cov codecov
     - name: Install 'skada' package
       run: |
-        python -m pip install --user -e .
+        python -m pip install --user --upgrade --progress-bar off pip
+        python -m pip install --user -e .[all,test]
     # Run Tests
     - name: Run Tests with torch
       run: pytest skada/ --verbose --cov=skada --cov-report term
-    # Codecov 
+    # Codecov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
