--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,7 @@ repos:
       - id: codespell
         additional_dependencies:
           - tomli
+        args: ["--toml", "pyproject.toml"]
         files: ^skada/|^docs/|^examples/
         types_or: [python, bib, rst, inc]
 
