--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,10 @@ repos:
       - id: codespell
         additional_dependencies:
           - tomli
-        args: ["--toml", "pyproject.toml"]
+        args: [
+          "--ignore-words",
+          "ignore-words.txt",
+        ]
         files: ^skada/|^docs/|^examples/
         types_or: [python, bib, rst, inc]
 
