--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     hooks:
       - id: ruff
         name: ruff lint skada
-        args: ["--fix"]
+        args: ["--fix", "--pyproject.tml"]
         files: ^skada/
       - id: ruff
         name: ruff lint skada preview
