--- a/.github/workflows/testing_minimal.yml
+++ b/.github/workflows/testing_minimal.yml
@@ -5,7 +5,7 @@ on:
   workflow_call:
     inputs:
       skip_test:
-        description: 'check if the tests are skkiped or not'
+        description: 'check if the tests are skipped or not'
         required: true
         type: boolean
         default: false
@@ -16,7 +16,7 @@ permissions: {}
 
 jobs:
   Test-minimal:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
@@ -24,7 +24,8 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     # name for files
     env:
-      REPORT_NAME: ${{ matrix.python-version }}-os-${{ matrix.os }}
+      OS: ${{ matrix.os }}
+      PYTHON: ${{ matrix.python-version }}
     defaults:
       run:
         shell: bash -l {0}
@@ -33,33 +34,26 @@ jobs:
     # Install skada
     - name: Checking Out Repository
       uses: actions/checkout@v4
-    # Cache 'skada' datasets
-    - name: Create/Restore Skada Data Cache
-      id: cache-skada_datasets
-      uses: actions/cache@v4
       with:
-        path: ~/skada_datasets
-        key: ${{ runner.os }}-v3
+        ref: ${{ github.event.pull_request.head.sha || github.ref }}
     # Install Python & Packages
     - uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: ${{ matrix.python-version }}
         cache: 'pip' # caching pip dependencies
     - run: which python
     - name: Install dependencies
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
-        python -m pip install --user -r requirements.txt
-        python -m pip install --user --upgrade pytest pytest-cov codecov
-    - name: Install 'skada' package
-      run: |
-        python -m pip install --user -e .
+        python -m pip install --user -e .[test]
     # Run Tests
     - name: Run Tests without torch
       run: pytest skada/ --verbose --cov=skada --cov-report term
     # Codecov 
     - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
+        token: ${{ secrets.CODECOV_TOKEN }}
+        verbose: true
+        env_vars: OS,PYTHON
+        fail_ci_if_error: true
